--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DJANGO THE BEST</title>
+    <title>iot</title>
 </head>
 <body>
-    <h1>Hello Django!</h1>
+    <h1>App iot</h1>
 </body>
 </html>
